<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/backGround"
        android:src="@mipmap/horizontal3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType = "centerCrop" />

    <com.jetradarmobile.snowfall.SnowfallView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:snowflakesNum="150"
        app:snowflakeAlphaMin="5"
        app:snowflakeAlphaMax="255"
        app:snowflakeAngleMax="10"
        app:snowflakeSizeMin="8dp"
        app:snowflakeSizeMax="32dp"
        app:snowflakeSpeedMin="4"
        app:snowflakeSpeedMax="12"
        app:snowflakesFadingEnabled="true"
        app:snowflakesAlreadyFalling="false"
        app:snowflakeImage="@mipmap/snow"/>

    <EditText
        android:id="@+id/txtHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#99FFFFFF"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txtHost"
        app:layout_constraintBottom_toTopOf="@+id/txtPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtPort"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#99FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHost" />

    <Button
        android:id="@+id/bGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bGuardarConfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPort" />
</android.support.constraint.ConstraintLayout>